@@ -519,10 +519,10 @@ void FastAccelStepper::setDelayToDisable(uint16_t delay_ms) {
   }
   _off_delay_count = max(delay_count, 1);
 }
-void FastAccelStepper::setSpeed(uint32_t min_step_us) {
+int8_t FastAccelStepper::setSpeed(uint32_t min_step_us) {
   _rg.setSpeed(min_step_us);
 }
-void FastAccelStepper::setAcceleration(uint32_t accel) {
+int8_t FastAccelStepper::setAcceleration(uint32_t accel) {
   _rg.setAcceleration(accel);
 }
 int8_t FastAccelStepper::moveTo(int32_t position) {
