@@ -1,3 +1,7 @@
+pre-0.8.14:
+- avoid overflow in setSpeed for super slow speed
+- setSpeed and setAcceleration return status code
+
 0.18.13:
 - Add fix for issue #41: High acceleration and high speed
 
